# someipy

./: .gitignore  CHANGELOG.md  Gemfile  LICENSE  README.md  _config.yml  article.md  calling_methods.md  index.md  offering_events.md  offering_methods.md  rpi.md  service_discovery.md  service_interface.md  setup.cfg  subscribing_events.md
.github/workflows/: pages.yml  tests.yml
_site/: 404.html  CHANGELOG.html  feed.xml  index.html
_site/assets/css/: just-the-docs-dark.css.map  just-the-docs-default.css.map  just-the-docs-light.css.map
_site/assets/js/: just-the-docs.js  search-data.json
docs/: calling_methods.rst  changelog.rst  conf.py  cookbook.rst  getting_started.rst  index.rst  introduction.rst  offering_events.rst  offering_methods.rst  requirements.txt  rpi.rst  service_discovery.rst  service_interface.rst  someipy_daemon.rst  subscribing_events.rst  whatsnew.rst
docs/api/: client_service_instance.rst  connect_to_someipy_daemon.rst  event.rst  eventgroup.rst  index.rst  message_type.rst  method.rst  method_result.rst  return_code.rst  serialization.rst  server_service_instance.rst  service.rst  service_builder.rst  someipy_logging.rst  transport_layer_protocol.rst
docs/images/: someipy_v2_architecture.d2
example_apps/: addition_method_parameters.py  call_method_tcp.py  call_method_udp.py  offer_method.py  offer_method_tcp.py  offer_method_udp.py  offer_multiple_services.py  receive_events.py  receive_events_tcp.py  receive_events_udp.py  send_events.py  send_events_tcp.py  send_events_udp.py  temperature_msg.py
example_apps/rosbags/: Pose.msg  TurtlesimPose.py  replay_rosbag.py  test.bag
integration_tests/: CMakeLists.txt  README.md
integration_tests/automated_tests/: call_method_tcp.py  call_method_udp.py  offer_method_tcp.py  offer_method_udp.py  offer_multiple_services.py  receive_events_tcp.py  receive_events_udp.py  run_all.py  send_events_tcp.py  send_events_udp.py  test_base.py
integration_tests/call_method_tcp/: call_method_tcp.cpp  vsomeip-client.json
integration_tests/call_method_udp/: call_method_udp.cpp  vsomeip-client.json
integration_tests/offer_method_tcp/: offer_method_tcp.cpp
integration_tests/offer_method_udp/: offer_method_udp.cpp  start_app.sh  vsomeip-client.json
integration_tests/offer_multiple_services/: offer_multiple_services.cpp  vsomeip-client.json
integration_tests/receive_events_tcp/: receive_events_tcp.cpp  vsomeip-client.json
integration_tests/receive_events_udp/: receive_events_udp.cpp  start_app.sh  vsomeip-client.json
integration_tests/send_events/: send_events.cpp  start_app.sh
source/: calling_methods.rst  conf.py  index.rst  offering_methods.rst
source/images/service_discovery/: multicast.drawio
src/: logging.py  message_types.py  serialization.py  server_service_instance.py  service.py  service_discovery.py  simple_timer.py  someip_header.py  someip_sd_header.py  utils.py
src/_internal/: logging.py  service_discovery_abcs.py  simple_timer.py  someip_header.py  someip_sd_builder.py  someip_sd_extractors.py  someip_sd_header.py
src/someipy/: __init__.py  client_service_instance.py  logging.py  serialization.py  server_service_instance.py  service.py  service_discovery.py  someipy_logging.py  someipyd.json  someipyd.py
src/someipy/_internal/: __init__.py  daemon_client_abcs.py  logging.py  message_types.py  method_result.py  offer_service_storage.py  return_codes.py  service_discovery_abcs.py  session_handler.py  simple_timer.py  someip_data_processor.py  someip_endpoint.py  someip_endpoint_storage.py  someip_header.py  someip_message.py  (+13 more)
test_apps/: CMakeLists.txt  README.md  build_test_apps.sh
test_apps/call_method_tcp/: start_app.sh
test_apps/call_method_udp/: call_method_udp.cpp  start_app.sh  vsomeip-client.json
test_apps/offer_method_tcp/: start_app.sh
test_apps/offer_multiple_services/: start_app.sh
test_apps/receive_events_tcp/: receive_events_tcp.cpp  start_app.sh  vsomeip-client.json
test_apps/receive_events_udp/: vsomeip-client.json
test_apps/send_events_udp/: start_app.sh
tests/: test_sd_service_with_timestamp.py  test_serialization.py  test_someip_data_processor.py  test_store_with_timeout.py  test_subscribers.py
(+2 files in other folders)
