[metadata]
name = someipy
version = 0.0.1
author = Christian H.
author_email = someipy.package@gmail.com
description = A Python package implementing the SOME/IP protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrizog/someipy
project_urls =
    Bug Tracker = https://github.com/chrizog/someipy/issues
    Repository = https://github.com/chrizog/someipy
classifiers =
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src