[metadata]
name = someipy
version = 0.0.10
author = Christian H.
author_email = someipy.package@gmail.com
description = A Python package implementing the SOME/IP protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrizog/someipy
project_urls =
    Bug Tracker = https://github.com/chrizog/someipy/issues
    Repository = https://github.com/chrizog/someipy
classifiers =
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
license_files = LICENSE.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src